# SAM3

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  README.md  crosscheck_cpp.wl  test_sam3.wl
Mathematica/: SAM-3.0.nb  crosscheck_cpp.wl  test_sam3.wl
cpp/: CMakeLists.txt  README.md  bridge_sam3.cpp  example.cpp  example_binomial.cpp  sam3.h  test_sam3.cpp
scripts/: crosscheck.sh
